--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
   <dependencies>
     <dependency>
       <groupId>de.saxsys</groupId>
-      <artifactId>mvvmFX</artifactId>
-      <version>0.4.0</version>
+      <artifactId>mvvmfx</artifactId>
+      <version>1.3.1</version>
     </dependency>
   </dependencies>
 
