--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
       <version>2.5.3</version>
     </dependency>
     <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.12.6</version>
+    </dependency>
+    <dependency>
       <groupId>de.saxsys</groupId>
       <artifactId>mvvmfx</artifactId>
       <version>1.3.1</version>
