--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,17 @@
       <artifactId>mvvmfx</artifactId>
       <version>1.3.1</version>
     </dependency>
+    <dependency>
+      <groupId>io.reactivex</groupId>
+      <artifactId>rxjava</artifactId>
+      <version>1.0.14</version>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.16.6</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
