--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,19 @@
       <artifactId>dq10remote</artifactId>
       <version>3.0.0-SNAPSHOT</version>
     </dependency>
-
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
+      <version>19</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-fxml</artifactId>
+      <version>19</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-web</artifactId>
       <version>19</version>
     </dependency>
     <dependency>
@@ -83,7 +92,14 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-maven-plugin</artifactId>
+        <version>0.0.8</version>
+        <configuration>
+          <mainClass>yukihane.dq10bzrjava.Starter</mainClass>
+        </configuration>
+      </plugin>
     </plugins>
-
   </build>
 </project>
